# Aesi-Multiprecision

./: .editorconfig  .gitignore  Aesi-Multiprecision.h  Aesi.h  AesiMultiprecision.h  Aessi.h  Aeu-Multiprecision.h  Aeu.h  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Multiprecision.cpp  Multiprecision.h  NumberTheory.h  PLAN.md  PrecisionCast.h  README.md  ReadMe.md  TODO.md  main.cpp
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build.yml  build_multiple_platforms.yml  commitlint.yml  conventional-commits.yml  coverage.yml  cuda.yml  documentation.yml  generate_time_table.yml  gtest_multiple_platforms.yml  integration.yml  make_release.yml  sanitize.yml  sanitize_multiple_platforms.yml  speed_comparison.yml  static.yml  test.yml  update_readme.yml  upload_release.yml
benchmark/: CMakeLists.txt  addition.cpp  division.cpp  gcd.cpp  modulo.cpp  multiplication.cpp  powm.cpp  subtraction.cpp
ci/: example_tests.xml  make_plot.py
ci/benchmarking/: example_benchmarks.json  make_plot.py  make_summary.py  update_image_link.py
ci/benchmarks/: subtraction.cpp
ci/cuda/: CMakeLists.txt  smoke.cu
ci/integration/: CMakeLists.txt  main.cpp  presentation.cpp
ci/speed_comparison/: gcd.cpp  modulo.cpp  multiplication.cpp  powm.cpp
cmake/: AesiMultiprecisionConfig.cmake.in
include/AesiMultiprecision/: Aesi.h  Aeu.h
sanitize/signed/: CMakeLists.txt  main.cpp
sanitize/unsigned/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Jupiter.ipynb  addition.cpp  bitwise.cpp  boolean.cpp  complex.cpp  display.cpp  division.cpp  generation.h  initialization.cpp  modulo.cpp  multiplication.cpp  number-theory.cpp  subtraction.cpp  testing.cpp
test/arithmetic/: CMakeLists.txt  addition.cpp  division.cpp  modulo.cpp  multiplication.cpp  odd-even.cpp  odd_even.cpp  power2.cpp  square-root.cpp  square_root.cpp  subtraction.cpp
test/arithmetic/addition/: addition.cpp  addition_signed.cpp  addition_unsigned.cpp  signed.cpp  unsigned.cpp
test/arithmetic/division/: division.cpp  division_signed.cpp  division_unsigned.cpp  signed.cpp  unsigned.cpp
test/arithmetic/modulo/: modulo.cpp  modulo_signed.cpp  modulo_unsigned.cpp  signed.cpp  unsigned.cpp
test/arithmetic/multiplication/: multiplication.cpp  multiplication_signed.cpp  multiplication_unsigned.cpp  signed.cpp  unsigned.cpp
test/arithmetic/subtraction/: signed.cpp  subtraction.cpp  subtraction_signed.cpp  subtraction_unsigned.cpp  unsigned.cpp
test/basic_arithmetic/: CMakeLists.txt  addition.cpp  division.cpp  subtraction.cpp
test/benchmarks/: CMakeLists.txt  benchmarks.h  cryptopp_cmp.cpp  cryptopp_comparison.cpp  measures.db  mpz_comparison.cpp
test/bitwise/: CMakeLists.txt  and.cpp  binary.cpp  bitwise.cpp  bitwise_and.cpp  bitwise_manipulations.cpp  bitwise_not.cpp  bitwise_or.cpp  bitwise_shift.cpp  bitwise_xor.cpp  gpu.cpp  not.cpp  or.cpp  shift.cpp  xor.cpp
test/bitwise/and/: bitwise_and_signed.cpp  bitwise_and_unsigned.cpp  signed.cpp  unsigned.cpp
test/bitwise/manipulations/: bitwise_manipulations_signed.cpp  bitwise_manipulations_unsigned.cpp  manipulations.cpp  signed.cpp  unsigned.cpp
test/bitwise/or/: bitwise_or_signed.cpp  bitwise_or_unsigned.cpp  signed.cpp  unsigned.cpp
test/bitwise/shift/: signed.cpp  unsigned.cpp
test/bitwise/xor/: bitwise_xor_signed.cpp  bitwise_xor_unsigned.cpp  signed.cpp  unsigned.cpp
test/boolean/: CMakeLists.txt  boolean.cpp  boolean_device.cpp  boolean_device_signed.cpp  boolean_device_unsigned.cpp  boolean_signed.cpp  boolean_unsigned.cpp  signed.cpp  unsigned.cpp
test/boolean/preCpp20/: signed.cpp  unsigned.cpp
test/boolean/spaceship/: signed.cpp  unsigned.cpp
test/extended_arithmetic/: CMakeLists.txt  boolean.cpp  modulo.cpp
test/gpu/: CMakeLists.txt  cuda.cpp  opencl.cpp
test/number-theory/: CMakeLists.txt  gcd.cpp  lcm.cpp  powm.cpp  powm_signed.cpp
test/number-theory/gcd/: gcd_signed.cpp  signed.cpp  unsigned.cpp
test/number-theory/lcm/: lcm_signed.cpp  signed.cpp  unsigned.cpp
test/number-theory/powm/: powm_signed.cpp
test/operations/: CMakeLists.txt  basic_initialization.cpp  binary_io.cpp  binary_read_write.cpp  cast.cpp  display.cpp  initialization.cpp  initialization_different_notations.cpp  integral_cast.cpp  precision_cast.cpp  presentation.cpp  prezentation.cpp
test/operations/casts/: integral_cast.cpp  integral_cast_signed.cpp  integral_cast_unsigned.cpp  precision_cast.cpp  precision_cast_signed.cpp
test/operations/display/: display.cpp  display_signed.cpp  signed.cpp  unsigned.cpp
test/operations/initialization/: basic_initialization_signed.cpp  basic_initialization_unsigned.cpp  cryptopp-integration.cpp  gmp-integration.cpp  initialization.cpp  initialization_different_notation_signed.cpp  initialization_different_notation_unsigned.cpp  signed.cpp  unsigned.cpp
test/speed_comparison/: CMakeLists.txt  addition.cpp  division.cpp  gcd.cpp  modulo.cpp  multiplication.cpp  plot.py  powm.cpp  subtraction.cpp
test/test-generation/: CMakeLists.txt  main.cpp
workflows_ignore/: benchmarks.yml  build_multiple_platforms.yml  gtest_multiple_platforms.yml  sanitize_multiple_platforms.yml  upload_release.yml
